--- a/contents/marp/src/2024-05-React.md
+++ b/contents/marp/src/2024-05-React.md
@@ -11,6 +11,12 @@ class: lead
 
 ---
 
+※このコンテンツは marp のテストのため、自動生成コンテンツによる内容未精査含みます。
+
+<a href="/note/contents/marp/slide-links.html">スライド一覧</a>
+
+---
+
 ## 背景
 - **React**: Facebookによる開発
 - **特徴**: コンポーネントベースのライブラリ、SPAのためのフロントエンドライブラリ
