--- a/contents/marp/src/2024-06-LT.md
+++ b/contents/marp/src/2024-06-LT.md
@@ -7,7 +7,7 @@ paginate: true
 
 # ChatGPTを使って30分でLTを作成する
 
-## ～効率的なプレゼン資料作成～
+## 話したいことはあるけどスライドを作るのが大変な人向け
 
 ---
 
@@ -19,27 +19,24 @@ paginate: true
 3. LT作成のステップ
 4. 実際のデモ
 5. 結果と効果
-5. まとめ
+6. まとめ
 
 ---
 
 ## 0. モチベーション
 
-話したいことはあるが、LTを作り始めるのは大変
-
 - **アイデアはある**:
   - 伝えたいテーマやアイデアは頭の中にある
 
 - **問題点**:
-  - どこから手を付けるべきか分からない
-  - 内容を整理してまとめるのが難しい
-  - 1ページ目から作り始めると見通しが立たない
-  - プレゼン資料のテンプレートは過去から持ってくることも大変
   - 時間がかかる
+  - どこから手を付けるべきか分からない
+    - 1ページ目から作り始めると見通しが立たない
+    - プレゼン資料のテンプレートは過去から持ってくることも大変
 
 - **解決策**:
-  - ChatGPTを活用することで効率的に内容を生成
-  - アウトラインを作成し、スライド作成を迅速に進める
+  - ChatGPTを活用することで下書きをしてもらう！
+  - マークダウン形式のテキスト編集でスライド作成を迅速に進める
 
 ---
 
@@ -69,11 +66,6 @@ paginate: true
 - **Marp**:
   - スライド作成用のMarkdownツール
   - VSCode拡張機能
-
-### その他
-
-- 明確なテーマ
-- 発表時間（例: 5～10分）
 
 ---
 
@@ -114,6 +106,7 @@ paginate: true
 - アジェンダを作成してくれるので下書きの時点でまともな流れになる
 - 書き換えるのを忘れると、内容がおかしくなる
   - あくまでも下書きで書き換えを前提としている
+- オリジナリティは自分で入れる必要がある
 
 ---
 
@@ -128,6 +121,7 @@ paginate: true
 
 ### 利用生成AIの選定
 
+ChatGPT とタイトルに入れたが、
 Google Gemini、bing でも同様のことができることは確認している。
 Google Gemini だと出典リンクを明記してくれるのがいい。
 
